[gd_scene load_steps=8 format=3 uid="uid://dupg3rcnhpcou"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_eguwa"]
[ext_resource type="Texture2D" uid="uid://bd2a1qpdypru6" path="res://assets/GUI/sound-off.png" id="2_1sq88"]
[ext_resource type="Texture2D" uid="uid://c55avoygwch5h" path="res://assets/GUI/sound-on.png" id="3_sgvft"]
[ext_resource type="Texture2D" uid="uid://cp0ssvak42d3h" path="res://assets/GUI/speaker-off.png" id="4_hg21o"]
[ext_resource type="Texture2D" uid="uid://dyru7wa4psw0w" path="res://assets/GUI/speaker.png" id="5_3imkf"]
[ext_resource type="FontFile" uid="uid://b652jstmymcxh" path="res://assets/texts/splurge.ttf" id="6_3lv4q"]
[ext_resource type="Texture2D" uid="uid://5nhshc8l5lsk" path="res://assets/GUI/cancel.png" id="7_de7mg"]

[node name="Settings" type="CanvasLayer"]
follow_viewport_enabled = true
script = ExtResource("1_eguwa")

[node name="Background" type="ColorRect" parent="."]
show_behind_parent = true
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
offset_top = 99.0
offset_right = -176.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 172.0
offset_top = 97.0
offset_right = -173.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Interactive" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Music" type="HBoxContainer" parent="MarginContainer/Interactive"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
metadata/_edit_group_ = true

[node name="MusicOff" type="Button" parent="MarginContainer/Interactive/Music"]
layout_mode = 2
icon = ExtResource("2_1sq88")
flat = true

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Interactive/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="MusicOn" type="Button" parent="MarginContainer/Interactive/Music"]
layout_mode = 2
icon = ExtResource("3_sgvft")
flat = true

[node name="SFX" type="HBoxContainer" parent="MarginContainer/Interactive"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20
alignment = 1
metadata/_edit_group_ = true

[node name="SFXOff" type="Button" parent="MarginContainer/Interactive/SFX"]
layout_mode = 2
icon = ExtResource("4_hg21o")
flat = true

[node name="SFXSlider" type="HSlider" parent="MarginContainer/Interactive/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SFXOn" type="Button" parent="MarginContainer/Interactive/SFX"]
layout_mode = 2
icon = ExtResource("5_3imkf")
flat = true

[node name="KeyBindings" type="Button" parent="MarginContainer/Interactive"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_3lv4q")
theme_override_font_sizes/font_size = 32
text = "Atalhos de Teclado"

[node name="Exit" type="Button" parent="MarginContainer/Interactive"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_3lv4q")
theme_override_font_sizes/font_size = 24
text = "Sair para tela inicial"

[node name="Close" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
icon = ExtResource("7_de7mg")
flat = true
metadata/_edit_group_ = true

[connection signal="pressed" from="MarginContainer/Interactive/Music/MusicOff" to="." method="_on_music_off_pressed"]
[connection signal="drag_ended" from="MarginContainer/Interactive/Music/MusicSlider" to="." method="_on_music_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/Interactive/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Interactive/Music/MusicOn" to="." method="_on_music_on_pressed"]
[connection signal="pressed" from="MarginContainer/Interactive/SFX/SFXOff" to="." method="_on_sfx_off_pressed"]
[connection signal="drag_ended" from="MarginContainer/Interactive/SFX/SFXSlider" to="." method="_on_sfx_slider_drag_ended"]
[connection signal="value_changed" from="MarginContainer/Interactive/SFX/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MarginContainer/Interactive/SFX/SFXOn" to="." method="_on_sfx_on_pressed"]
[connection signal="pressed" from="MarginContainer/Interactive/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/Close" to="." method="_on_close_pressed"]
